Finished the structure of the html, no styling yet

--- a/index.html
+++ b/index.html
@@ -29,5 +29,76 @@
             </div>
         </section>
     </header>
+    <section id="home" class="home">
+        <h2>Who's Willow?</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsum quae, voluptatem eum, magni placeat excepturi, similique odio alias numquam soluta. Magnam at voluptatibus ab suscipit deserunt beatae fugiat sed.</p>
+        <button class="read-more">Find Out More</button>
+    </section>
+    <section id="about" class="about">
+        <div>
+            <img src="./styles/assets/home-image-2.jpg" alt="A side view of a bridge that arches over a ravine with a waterfall behind it">
+        </div>
+        <div>
+            <h2>Favourite Things</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et tempora autem eveniet ab, temporibus praesentium omnis molestiae iure nobis dolorum ex saepe modi esse, fuga facere blanditiis quidem voluptatibus!</p>
+            <button class="read-more">Read More</button>
+        </div>
+        <div>
+            <h2>Bucket List</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et tempora autem eveniet ab, temporibus praesentium omnis molestiae iure nobis dolorum ex saepe modi esse, fuga facere blanditiis quidem voluptatibus!</p>
+            <button class="read-more">Read More</button>
+        </div>
+        <div>
+            <img src="./styles/assets/home-image-3.jpg" alt="A photo of a white lily">
+        </div>
+    </section>
+    <section id="blog" class="blog">
+        <div class="blog-image-card">
+            <div class="blog-image">
+                <img src="./styles/assets/home-image-4.jpg" alt="Willow with her back turned to the camera, standing in a green leafy garden wearing a bright yellow raincoat">
+            </div>
+            <div class="blog-card"></div>
+        </div>
+        <div class="blog-article">
+            <h2>Willow's Journey</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et tempora autem eveniet ab, temporibus praesentium omnis molestiae iure nobis dolorum ex saepe modi esse, fuga facere blanditiis quidem voluptatibus!</p>
+            <button class="read-more">Find Out More</button>
+        </div>
+    </section>
+    <section class="banner">
+
+    </section>
+    <section class="insta-wall">
+        <div class="insta-pic1">
+            <img src="./styles/assets/home-image-6.jpg" alt="A photo of a bare road winding away from the viewer">
+        </div>
+        <div class="insta-pic2">
+            <img src="./styles/assets/home-image-7.jpg" alt="Fruit in bowls">
+        </div>
+        <div class="insta-pic3">
+            <img src="./styles/assets/home-image-8.jpg" alt="An ornate staircase with intricate patterns on the wall behind it">
+        </div>
+    </section>
+    <section id="contact" class="contact">
+        <div class="contact-box">
+            <h2>Photos</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga distinctio veniam est laborum, minima sunt officia provident soluta possimus impedit dicta dolore nulla culpa natus facere! Velit eos molestiae illo.</p>
+        </div>
+        <div class="contact-box">
+            <h2>About</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium nostrum consequuntur error debitis aperiam, impedit maiores quasi repellendus, voluptatem totam vel, iste mollitia ea beatae? Cupiditate, temporibus! Delectus, voluptatem voluptas.</p>
+        </div>
+        <div class="contact-box">
+            <h2>Blog</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae rem ea natus sit, quam non explicabo voluptas? A sunt facilis at, libero labore autem earum repudiandae rerum provident perferendis vel!</p>
+        </div>
+        <div class="contact-box">
+            <h2>Contact Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, expedita consequuntur explicabo magnam necessitatibus numquam quisquam nihil veritatis? Quod autem modi ipsam quam deleniti repellat est eligendi totam labore aliquam.</p>
+        </div>
+    </section>
+    <footer>
+        <p>Copyright &copy; 2018 HackerYou</p>
+    </footer>
 </body>
 </html>
