styled the index header, added the curled text as the before element

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="./styles/style.css">
     <title>Daily Musings Of Willow</title>
     <script src="https://kit.fontawesome.com/356a2141ec.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <header>
@@ -19,14 +22,17 @@
             </ul>
         </nav>
         <section class="landing">
-            <div class="title">
-                <h1>Willow</h1>
-            </div>
-            <div class="title-image-card">
-                <div class="title-image">
-                    <img src="./styles/assets/home-image-1.jpg" alt="Header image of the blog creator, Willow">
+            <div class="landing-flex-box wrapper">
+
+                <div class="title">
+                    <h1>Willow</h1>
                 </div>
-                <div class="title-card"></div>
+                <div class="title-image-card">
+                    <div class="title-image">
+                        <img src="./styles/assets/home-image-1.jpg" alt="Header image of the blog creator, Willow">
+                    </div>
+                    <div class="title-card"></div>
+                </div>
             </div>
         </section>
     </header>
