Finished the landing section on the home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul class="nav-bar">
-                <li><a href="#home">Home</a></li>
+                <li><a class="accent-menu-item" href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li>Willow</li>
                 <li><a href="#blog">Blog</a></li>
