working on styling the home section, needs more work

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </section>
     </header>
-    <section id="home" class="home">
+    <section id="home" class="home wrapper">
         <h2>Who's Willow?</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsum quae, voluptatem eum, magni placeat excepturi, similique odio alias numquam soluta. Magnam at voluptatibus ab suscipit deserunt beatae fugiat sed.</p>
         <button class="read-more">Find Out More</button>
