styled the grid section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
+
+        <!--  HEADER SECTION  -->
+
+        <!--  NAV SECTION  -->
     <header>
         <nav>
             <ul class="nav-bar">
@@ -21,6 +25,9 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+
+        <!-- LANDING SECTION -->
+
         <section class="landing">
             <div class="landing-flex-box wrapper">
 
@@ -36,29 +43,52 @@
             </div>
         </section>
     </header>
+
+    <!-- HOME SECTION -->
+
     <section id="home" class="home wrapper">
         <h2>Who's Willow?</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsum quae, voluptatem eum, magni placeat excepturi, similique odio alias numquam soluta. Magnam at voluptatibus ab suscipit deserunt beatae fugiat sed.</p>
         <button class="read-more">Find Out More</button>
     </section>
+
+    <!-- ABOUT / GRID SECTION -->
+
     <section id="about" class="about">
-        <div>
-            <img src="./styles/assets/home-image-2.jpg" alt="A side view of a bridge that arches over a ravine with a waterfall behind it">
+
+        <!-- TOP LAYER -->
+
+        <div class="top-layer wrapper">
+            <div class="grid-box image-box1">
+                <img src="./styles/assets/home-image-2.jpg" alt="A side view of a bridge that arches over a ravine with a waterfall behind it">
+            </div>
+            <div class="grid-box text-box1">
+                <h2>Favourite Things</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et tempora autem eveniet ab, temporibus praesentium omnis molestiae iure nobis dolorum ex saepe modi esse, fuga facere blanditiis quidem voluptatibus!</p>
+                <button class="read-more">Read More</button>
+            </div>
+            <div class="grid-box text-box2">
+                <h2>Bucket List</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et tempora autem eveniet ab, temporibus praesentium omnis molestiae iure nobis dolorum ex saepe modi esse, fuga facere blanditiis quidem voluptatibus!</p>
+                <span><button class="read-more">Read More</button></span>
+            </div>
+            <div class="grid-box image-box2">
+                <img src="./styles/assets/home-image-3.jpg" alt="A photo of a white lily">
+            </div>
         </div>
-        <div>
-            <h2>Favourite Things</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et tempora autem eveniet ab, temporibus praesentium omnis molestiae iure nobis dolorum ex saepe modi esse, fuga facere blanditiis quidem voluptatibus!</p>
-            <button class="read-more">Read More</button>
-        </div>
-        <div>
-            <h2>Bucket List</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et tempora autem eveniet ab, temporibus praesentium omnis molestiae iure nobis dolorum ex saepe modi esse, fuga facere blanditiis quidem voluptatibus!</p>
-            <button class="read-more">Read More</button>
-        </div>
-        <div>
-            <img src="./styles/assets/home-image-3.jpg" alt="A photo of a white lily">
+
+        <!-- BOTTOM LAYER -->
+
+        <div class="bottom-layer">
+            <div class="green-box1 grid-box"></div>
+            <div class="white-box1 grid-box"></div>
+            <div class="white-box2 grid-box"></div>
+            <div class="green-box2 grid-box"></div>
         </div>
     </section>
+
+    <!-- BLOG SECTION -->
+
     <section id="blog" class="blog">
         <div class="blog-image-card">
             <div class="blog-image">
@@ -72,9 +102,15 @@
             <button class="read-more">Find Out More</button>
         </div>
     </section>
+
+    <!-- BANNER  -->
+
     <section class="banner">
 
     </section>
+
+    <!-- INSTA WALL / STRIP -->
+
     <section class="insta-wall">
         <div class="insta-pic1">
             <img src="./styles/assets/home-image-6.jpg" alt="A photo of a bare road winding away from the viewer">
@@ -86,6 +122,9 @@
             <img src="./styles/assets/home-image-8.jpg" alt="An ornate staircase with intricate patterns on the wall behind it">
         </div>
     </section>
+
+    <!-- CONTACT SECTION -->
+
     <section id="contact" class="contact">
         <div class="contact-box">
             <h2>Photos</h2>
@@ -104,6 +143,9 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, expedita consequuntur explicabo magnam necessitatibus numquam quisquam nihil veritatis? Quod autem modi ipsam quam deleniti repellat est eligendi totam labore aliquam.</p>
         </div>
     </section>
+
+    <!-- FOOTER SECTION -->
+
     <footer>
         <p>Copyright &copy; 2018 HackerYou</p>
     </footer>
