styled the blog section, up to the banner

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="nav-bar">
                 <li><a class="accent-menu-item" href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li>Willow</li>
+                <li class="name-sake">Willow</li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -89,7 +89,7 @@
 
     <!-- BLOG SECTION -->
 
-    <section id="blog" class="blog">
+    <section id="blog" class="blog wrapper">
         <div class="blog-image-card">
             <div class="blog-image">
                 <img src="./styles/assets/home-image-4.jpg" alt="Willow with her back turned to the camera, standing in a green leafy garden wearing a bright yellow raincoat">
@@ -98,7 +98,7 @@
         </div>
         <div class="blog-article">
             <h2>Willow's Journey</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et tempora autem eveniet ab, temporibus praesentium omnis molestiae iure nobis dolorum ex saepe modi esse, fuga facere blanditiis quidem voluptatibus!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores exercitationem ad praesentium hic incidunt ipsam voluptatum amet sint eligendi quibusdam neque facere esse dolorem ullam cupiditate sunt ut enim voluptatibus iste tempora laborum, quod porro voluptatem? Molestias porro ea magni omnis enim minus rem culpa quod. Sapiente nesciunt eius iste.</p>
             <button class="read-more">Find Out More</button>
         </div>
     </section>
