fixed a gap between the insta wall and the banner sections, causing gray block to appear

--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
 
     <!-- BANNER  -->
 
-    <section class="banner">
-
-    </section>
+    <section class="banner"></section>
 
     <!-- INSTA WALL / STRIP -->
 
-    <section class="insta-wall">
-        <div class="insta-pic1">
-            <img src="./styles/assets/home-image-6.jpg" alt="A photo of a bare road winding away from the viewer">
-        </div>
-        <div class="insta-pic2">
-            <img src="./styles/assets/home-image-7.jpg" alt="Fruit in bowls">
-        </div>
-        <div class="insta-pic3">
-            <img src="./styles/assets/home-image-8.jpg" alt="An ornate staircase with intricate patterns on the wall behind it">
+    <section class="insta">
+        <div class="insta-wall wrapper">
+            <div class="insta-pic1">
+                <img src="./styles/assets/home-image-6.jpg" alt="A photo of a bare road winding away from the viewer">
+            </div>
+            <div class="insta-pic2">
+                <img src="./styles/assets/home-image-7.jpg" alt="Fruit in bowls">
+            </div>
+            <div class="insta-pic3">
+                <img src="./styles/assets/home-image-8.jpg" alt="An ornate staircase with intricate patterns on the wall behind it">
+            </div>
         </div>
     </section>
 
