almost finished the contact section, finished the footer section. Just need to add fontawesome icons as ::before elements to the contact h2s

--- a/index.html
+++ b/index.html
@@ -125,22 +125,22 @@
 
     <!-- CONTACT SECTION -->
 
-    <section id="contact" class="contact">
+    <section id="contact" class="contact wrapper">
         <div class="contact-box">
             <h2>Photos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga distinctio veniam est laborum, minima sunt officia provident soluta possimus impedit dicta dolore nulla culpa natus facere! Velit eos molestiae illo.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, reprehenderit sed placeat dolorum repellat in perspiciatis neque! Itaque, ducimus porro.</p>
         </div>
         <div class="contact-box">
             <h2>About</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium nostrum consequuntur error debitis aperiam, impedit maiores quasi repellendus, voluptatem totam vel, iste mollitia ea beatae? Cupiditate, temporibus! Delectus, voluptatem voluptas.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente tempore illum, natus reiciendis voluptatum quas quisquam nostrum. Perspiciatis, fuga nobis.</p>
         </div>
         <div class="contact-box">
             <h2>Blog</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae rem ea natus sit, quam non explicabo voluptas? A sunt facilis at, libero labore autem earum repudiandae rerum provident perferendis vel!</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, quo quas. Et nesciunt, ducimus quo veniam temporibus ea laborum earum?</p>
         </div>
         <div class="contact-box">
             <h2>Contact Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, expedita consequuntur explicabo magnam necessitatibus numquam quisquam nihil veritatis? Quod autem modi ipsam quam deleniti repellat est eligendi totam labore aliquam.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem aperiam, explicabo exercitationem quam optio autem totam ipsam excepturi atque mollitia?</p>
         </div>
     </section>
 
