Finished the home page, no media queries yet

--- a/index.html
+++ b/index.html
@@ -126,20 +126,20 @@
     <!-- CONTACT SECTION -->
 
     <section id="contact" class="contact wrapper">
-        <div class="contact-box">
-            <h2>Photos</h2>
+        <div class="contact-box contact-box1">
+            <h2><span><div><i class="far fa-image"></i></div></span>Photos</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, reprehenderit sed placeat dolorum repellat in perspiciatis neque! Itaque, ducimus porro.</p>
         </div>
-        <div class="contact-box">
-            <h2>About</h2>
+        <div class="contact-box contact-box2">
+            <h2><span><div><i class="fas fa-user"></i></div></span>About</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente tempore illum, natus reiciendis voluptatum quas quisquam nostrum. Perspiciatis, fuga nobis.</p>
         </div>
-        <div class="contact-box">
-            <h2>Blog</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, quo quas. Et nesciunt, ducimus quo veniam temporibus ea laborum earum?</p>
+         <div class="contact-box contact-box2">
+            <h2><span><div><i class="fas fa-tv"></i></div></span>Blog</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente tempore illum, natus reiciendis voluptatum quas quisquam nostrum. Perspiciatis, fuga nobis.</p>
         </div>
-        <div class="contact-box">
-            <h2>Contact Me</h2>
+        <div class="contact-box contact-box4">
+            <h2><span><div><i class="fas fa-phone"></i></div></span>Contact Me</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem aperiam, explicabo exercitationem quam optio autem totam ipsam excepturi atque mollitia?</p>
         </div>
     </section>
