Fixed the positioning issue on blog page. Just need to make the comment form down the bottom, and it's finished :musical_note::musical_note:

--- a/blog.html
+++ b/blog.html
@@ -22,48 +22,70 @@
             <h1 class="contact-header">Blog & news</h1>
         </section>
     </header>
-    <main class="blog-main wrapper">
+    <main class="wrapper">
         <div class="flex-parent">
+            <div class="flex-child flex-child1">  
+                    <aside>        
+                        <div class="aside-bio wrapper">
+                            <div class="bio-image">
+                                <img src="./styles/assets/blog-image-2.jpg" alt="Artistic and melodramatic photo of the author, Willow">
+                            </div>
+                            <div class="bio">
+                                <h3>About Willow</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptate distinctio ad. <span><a href="#">Find out more.</a></span></p>
+                            </div>
+                        </div>
+                        <div class="aside-recent wrapper">
+                            <h3>Recent posts
+                                <ul>
+                                    <li>Lorem ipsum dolor sit.</li>
+                                    <li>Lorem dolor amet consectetur.</li>
+                                    <li>Lorem ipsum dolor sit.</li>
+                                    <li>Lorem ipsum sit amet.</li>
+                                </ul>
+                            </h3>
+                        </div>
+                    </aside>
+                </div>
+            </div>
+            <div class="flex-child flex-child2">
 
-        <div class="aside-wrapper">
+                <div class="article-container">
+                    <article class="wrapper">
+                        <h2>My favourite travel destinations</h2>
+                        <p>Monday October 8th, 2018 by Willow</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam eaque nam eos repellendus tenetur, ullam quaerat ut blanditiis alias tempora. Officia quasi error iste ab, cumque quidem sunt a illum.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo nobis ex expedita culpa, labore dolores distinctio harum esse voluptatibus laborum earum vitae rem? Unde, iusto libero reprehenderit ratione optio dignissimos.</p>
+                        <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione accusantium numquam officiis aliquid aliquam libero! Odio veniam ipsam sunt nulla voluptatibus praesentium? Magnam numquam officiis minus nisi? Molestiae, id tempora.</span><span>Delectus quos hic culpa debitis exercitationem veniam accusantium provident minima. Praesentium excepturi, ipsa voluptatem quaerat laboriosam quos ratione repellendus ab dicta nihil eveniet quas, earum accusantium dolore velit eaque debitis!</span></p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, neque, hic illo beatae sit eum blanditiis harum sequi cupiditate quis enim mollitia. Vel optio voluptatem, aspernatur debitis veritatis delectus fugit.</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos culpa soluta distinctio ipsum facilis dolorum iure odit voluptate omnis aliquam id, itaque quis voluptas rem, at eveniet, ipsa repellendus maxime. Sequi eveniet velit animi odit blanditiis pariatur ad? Doloremque dolorem tempore officiis voluptatibus minima aut tenetur consectetur consequatur laudantium quos.</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique non soluta aliquid quo itaque sequi, aliquam rem modi nesciunt saepe aperiam ea iste hic dolore voluptates fugiat quod distinctio consequatur.</p>
+                    </article>
+                    <div class="readerComments wrapper">
 
-            <aside>
-                
-                <div class="aside-bio wrapper">
-                    <div class="bio-image">
-                        <img src="./styles/assets/blog-image-2.jpg" alt="Artistic and melodramatic photo of the author, Willow">
-                    </div>
-                    <div class="bio">
-                        <h3>About Willow</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptate distinctio ad. <span><a href="#">Find out more.</a></span></p>
+                        <div class="comment1">
+                            <div class="readerPic">
+                                <img src="./styles/assets/blog-image-3.jpg" alt="Picture of commenting reader 1">
+                            </div>
+                            <div class="readerCommentBox">
+                                <p>Tuesday October 9th, 2018 by Barb</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, pariatur est unde quam error velit voluptates dignissimos, corporis sed ratione maiores fugiat quae repellendus, consequuntur placeat culpa explicabo cum facilis.</p>
+                            </div>
+                        </div>
+                        <div class="comment2">
+                                <div class="readerPic">
+                                    <img src="./styles/assets/blog-image-4.jpg" alt="Picture of commenting reader 2">
+                                </div>
+                                <div class="readerCommentBox">
+                                    <p>Wednesday October 10th, 2018 by Daisy</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, pariatur est unde quam error velit voluptates dignissimos, corporis sed ratione maiores fugiat quae repellendus, consequuntur placeat culpa explicabo cum facilis.</p>
+                                </div>
+                        </div>
                     </div>
                 </div>
-                <div class="aside-recent wrapper">
-                    <h3>Recent posts
-                        <ul>
-                            <li>Lorem ipsum dolor sit.</li>
-                            <li>Lorem dolor amet consectetur.</li>
-                            <li>Lorem ipsum dolor sit.</li>
-                            <li>Lorem ipsum sit amet.</li>
-                        </ul>
-                    </h3>
-                </div>
-            </aside>
-        </div>
-    </main>
-    <div class="article-container">
-        <article class="wrapper">
-            <h2>My favourite travel destinations</h2>
-            <p>Monday October 8th, 2018 by Willow</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam eaque nam eos repellendus tenetur, ullam quaerat ut blanditiis alias tempora. Officia quasi error iste ab, cumque quidem sunt a illum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo nobis ex expedita culpa, labore dolores distinctio harum esse voluptatibus laborum earum vitae rem? Unde, iusto libero reprehenderit ratione optio dignissimos.</p>
-            <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione accusantium numquam officiis aliquid aliquam libero! Odio veniam ipsam sunt nulla voluptatibus praesentium? Magnam numquam officiis minus nisi? Molestiae, id tempora.</span><span>Delectus quos hic culpa debitis exercitationem veniam accusantium provident minima. Praesentium excepturi, ipsa voluptatem quaerat laboriosam quos ratione repellendus ab dicta nihil eveniet quas, earum accusantium dolore velit eaque debitis!</span></p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, neque, hic illo beatae sit eum blanditiis harum sequi cupiditate quis enim mollitia. Vel optio voluptatem, aspernatur debitis veritatis delectus fugit.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos culpa soluta distinctio ipsum facilis dolorum iure odit voluptate omnis aliquam id, itaque quis voluptas rem, at eveniet, ipsa repellendus maxime. Sequi eveniet velit animi odit blanditiis pariatur ad? Doloremque dolorem tempore officiis voluptatibus minima aut tenetur consectetur consequatur laudantium quos.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique non soluta aliquid quo itaque sequi, aliquam rem modi nesciunt saepe aperiam ea iste hic dolore voluptates fugiat quod distinctio consequatur.</p>
-        </article>
-    </div>
-    </div>
+            </div>
+            </div>
+        </main>
         <footer class="contact-footer">
             <p>Copyright &copy; 2018 HackerYou</p>
         </footer>
