completed the desktop version of the website, with all links active

--- a/blog.html
+++ b/blog.html
@@ -11,11 +11,11 @@
     <header>
         <nav>
             <ul class="nav-bar">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./index.html#about">About</a></li>
                 <li class="name-sake">Willow</li>
                 <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact" class="accent-menu-item">Contact</a></li>
+                <li><a href="./contact.html" class="accent-menu-item">Contact</a></li>
             </ul>
         </nav>
         <section class="header-banner blog-banner">
@@ -81,6 +81,13 @@
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, pariatur est unde quam error velit voluptates dignissimos, corporis sed ratione maiores fugiat quae repellendus, consequuntur placeat culpa explicabo cum facilis.</p>
                                 </div>
                         </div>
+                    </div>
+                    <div class="comment-form">
+                        <form action="">
+                        <input type="text" name="contact" id="userName" placeholder="Name">
+                        <input type="email" name="contact" id="userEmail" placeholder="Email address">
+                        <textarea name="contact" id="userMessage" cols="30" rows="10" placeholder="Message"></textarea>
+                        <button type="submit" id="submitButton" name="contact">POST COMMENT</button>
                     </div>
                 </div>
             </div>
