--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
 <body>
     <nav>
             <ul class="nav-bar">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./index.html#about">About</a></li>
                 <li class="name-sake">Willow</li>
-                <li><a href="#blog">Blog</a></li>
+                <li><a href="./blog.html">Blog</a></li>
                 <li><a href="#contact" class="accent-menu-item">Contact</a></li>
             </ul>
         </nav>
@@ -37,14 +37,13 @@
                     <p>M5V2D5</p>
                 </div>
             </aside>
-            <div class="form-box">
+            <div id="contact" class="form-box">
 
                 <form action="">
-                        <input type="text" name="contact" id="userName" placeholder="Name">
-                        <input type="email" name="contact" id="userEmail" placeholder="Email address">
+                    <input type="text" name="contact" id="userName" placeholder="Name">
+                    <input type="email" name="contact" id="userEmail" placeholder="Email address">
                     <textarea name="contact" id="userMessage" cols="30" rows="10" placeholder="Message"></textarea>
-                    <button type="submit" id="submitButton" name="contact">Submit</button>    
-                    
+                    <button type="submit" id="submitButton" name="contact">Submit</button>        
                 </form>
             </div>
         </main>
