--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <header>
         <nav>
             <ul class="nav-bar">
-                <li><a class="accent-menu-item" href="#home">Home</a></li>
+                <li><a class="accent-menu-item" href="./index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li class="name-sake">Willow</li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -109,7 +109,7 @@
 
     <!-- INSTA WALL / STRIP -->
 
-    <section class="insta">
+    <section class="insta" id="insta">
         <div class="insta-wall wrapper">
             <div class="insta-pic1">
                 <img src="./styles/assets/home-image-6.jpg" alt="A photo of a bare road winding away from the viewer">
@@ -127,19 +127,19 @@
 
     <section id="contact" class="contact wrapper">
         <div class="contact-box contact-box1">
-            <h2><span><div><i class="far fa-image"></i></div></span>Photos</h2>
+            <h2><span><div><i class="far fa-image"></i></div></span><a href="#insta">Photos</a></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, reprehenderit sed placeat dolorum repellat in perspiciatis neque! Itaque, ducimus porro.</p>
         </div>
         <div class="contact-box contact-box2">
-            <h2><span><div><i class="fas fa-user"></i></div></span>About</h2>
+            <h2><span><div><i class="fas fa-user"></i></div></span><a href="#about">About</a></h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente tempore illum, natus reiciendis voluptatum quas quisquam nostrum. Perspiciatis, fuga nobis.</p>
         </div>
          <div class="contact-box contact-box2">
-            <h2><span><div><i class="fas fa-tv"></i></div></span>Blog</h2>
+            <h2><span><div><i class="fas fa-tv"></i></div></span><a href="blog.html">Blog</a></h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente tempore illum, natus reiciendis voluptatum quas quisquam nostrum. Perspiciatis, fuga nobis.</p>
         </div>
         <div class="contact-box contact-box4">
-            <h2><span><div><i class="fas fa-phone"></i></div></span>Contact Me</h2>
+            <h2><span><div><i class="fas fa-phone"></i></div></span><a href="contact.html">Contact Me</a></h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem aperiam, explicabo exercitationem quam optio autem totam ipsam excepturi atque mollitia?</p>
         </div>
     </section>
