still styling the home page with media queries, up to the blog section. Specificity is an issue with the h2

--- a/index.html
+++ b/index.html
@@ -87,6 +87,26 @@
         </div>
     </section>
 
+    <!-- HIDDEN GRID GALLERY FOR SMALLER SCREENS -->
+    
+    <section class="hidden-gallery wrapper">
+                    <div class="grid-box image-box1">
+                <img src="./styles/assets/home-image-2.jpg" alt="A side view of a bridge that arches over a ravine with a waterfall behind it">
+            </div>
+            <div class="grid-box text-box1">
+                <h2>Favourite Things</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et tempora autem eveniet ab, temporibus praesentium omnis molestiae iure nobis dolorum ex saepe modi esse, fuga facere blanditiis quidem voluptatibus!</p>
+                <button class="read-more">Read More</button>
+            </div>
+            <div class="grid-box text-box2">
+                <h2>Bucket List</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto et tempora autem eveniet ab, temporibus praesentium omnis molestiae iure nobis dolorum ex saepe modi esse, fuga facere blanditiis quidem voluptatibus!</p>
+                <span><button class="read-more">Read More</button></span>
+            </div>
+            <div class="grid-box image-box2">
+                <img src="./styles/assets/home-image-3.jpg" alt="A photo of a white lily">
+            </div>
+    </section>
     <!-- BLOG SECTION -->
 
     <section id="blog" class="blog wrapper">
