FINALLY fixed the styling issue, with code being overwritten in the css for the queries. All styling now works, tablet page finished for the home page =D

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <!-- HOME SECTION -->
 
     <section id="home" class="home wrapper">
+        <div class="tablet-hero-image">
+            <img src="./styles/assets/home-image-1.jpg" alt="Header image of the blog creator, Willow">
+        </div>
         <h2>Who's Willow?</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsum quae, voluptatem eum, magni placeat excepturi, similique odio alias numquam soluta. Magnam at voluptatibus ab suscipit deserunt beatae fugiat sed.</p>
         <button class="read-more">Find Out More</button>
@@ -89,7 +92,7 @@
 
     <!-- HIDDEN GRID GALLERY FOR SMALLER SCREENS -->
     
-    <section class="hidden-gallery wrapper">
+    <section class="hidden-gallery">
                     <div class="grid-box image-box1">
                 <img src="./styles/assets/home-image-2.jpg" alt="A side view of a bridge that arches over a ravine with a waterfall behind it">
             </div>
