Fixed the broken form on the blog page, copied and pasted across the form from the blog page, works fine now.

--- a/blog.html
+++ b/blog.html
@@ -82,13 +82,15 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="comment-form">
-                        <form action="">
+                   <div id="blog-form" class="form-box">
+
+                    <form action="">
                         <input type="text" name="contact" id="userName" placeholder="Name">
                         <input type="email" name="contact" id="userEmail" placeholder="Email address">
                         <textarea name="contact" id="userMessage" cols="30" rows="10" placeholder="Message"></textarea>
-                        <button type="submit" id="submitButton" name="contact">POST COMMENT</button>
-                    </div>
+                        <button type="submit" id="submitButton" name="contact">POST COMMENT</button>        
+                    </form>
+            </div>
                 </div>
             </div>
             </div>
