VS Code broke, managed to fix it and cleaned up some styles, and now new styles are being implemented again in the browser. Finished the mobile home page.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
                 <li><a href="./blog.html">Blog</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
-        </nav>
+            <i class="fas fa-bars"></i>
 
+        </nav>
         <!-- LANDING SECTION -->
 
         <section class="landing">
