--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,7 @@
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="./contact.html" class="accent-menu-item">Contact</a></li>
             </ul>
+            <i class="fas fa-bars"></i>
         </nav>
         <section class="header-banner blog-banner">
             <h1 class="contact-header">Blog & news</h1>
