--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
                 <li><a href="./blog.html">Blog</a></li>
                 <li><a href="#contact" class="accent-menu-item">Contact</a></li>
             </ul>
+            <i class="fas fa-bars"></i>
         </nav>
         <section class="header-banner">
             <h1 class="contact-header">Contact Me</h1>
