--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                         <li><i class="fab fa-linkedin-in"></i></li>
                         <li><i class="fab fa-instagram"></i></li>
                     </ul>
-                    <h3>info@email.com</h3>
+                    <h3 class="contact-email">info@email.com</h3>
                     <p>123 - 456 - 7890</p>
                     <p>123 Queen Street West, Unit 10</p>
                     <p>Toronto, Ontario</p>
