--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
             <i class="fas fa-bars"></i>
-
+            <div class="drop-menu">
+                <ul class="secret-menu">
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </div>
         </nav>
         <!-- LANDING SECTION -->
 
@@ -173,5 +180,7 @@
     <footer>
         <p>Copyright &copy; 2018 HackerYou</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
