--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,14 @@
                 <li><a href="#contact" class="accent-menu-item">Contact</a></li>
             </ul>
             <i class="fas fa-bars"></i>
+            <div class="drop-menu">
+                <ul class="secret-menu">
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </div>
         </nav>
         <section class="header-banner">
             <h1 class="contact-header">Contact Me</h1>
@@ -51,5 +59,6 @@
         <footer class="contact-footer">
             <p>Copyright &copy; 2018 HackerYou</p>
         </footer>
+        <script src="script.js"></script>
 </body>
 </html>
