The contact page form now returns a message to the user including their name upon form submission

--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,10 @@
                 </div>
             </aside>
             <div id="contact" class="form-box">
-
-                <form action="">
+                <div class="userThank">
+                    
+                </div>
+                <form class="contactForm" action="">
                     <input type="text" name="contact" id="userName" placeholder="Name">
                     <input type="email" name="contact" id="userEmail" placeholder="Email address">
                     <textarea name="contact" id="userMessage" cols="30" rows="10" placeholder="Message"></textarea>
